[package]
name = "vidyalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
regex = "1.7"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
htmlentity = "1.2.0"
open = "3"
image = "0.24.5"
iced_native = "0.6.1"

[dependencies.iced]
version = "0.5.2"
default-features = false
features = ["svg", "image", "wgpu", "tokio"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[profile.release]
lto = true
opt-level = "s"
strip = true
